# wigglecam

./: .gitignore  README.md  app_camera.py  app_postprocess.py  processor.py  pyproject.toml  te_st_register_algorithm_featurebased.py  te_st_register_algorithm_transformecc.py  testing.py  utils.py
.github/: dependabot.yml
.github/workflows/: cicd.yml  pytests.yml
algo_frameinterpolation/: ffmpeg.py
algo_register/: featurebased.py  transformecc.py
algo_register/archive/: featurebased_draft1.py  transformecc_draft1.py
connector/: models.py  node.py  pool.py
examples/: gpio.py  oneshot.py
examples/connector/: capture_and_download_pool.py  list_nodes.py  setup_and_trigger_pool.py
examples/gui/: camera.py
examples/lowlevel/: gpio.py
node/: __main__.py  app_api.py  app_minimal.py  common_utils.py  container.py  node_ui.py
node/config/: appconfig.py  models.py
node/routers/: static.py
node/routers/api/: __init__.py  acquisition.py  aquisition.py  camera.py  job.py
node/services/: baseservice.py  camera_service.py  gpio_primary.py  gpio_primary_clockwork.py  gpio_secondary.py  gpio_secondary_node.py  loggingservice.py  sync_acquisition_service.py  sync_aquisition_service.py  synced_camera.py
node/services/backends/cameras/: abstractbackend.py  backend.py  picamera2.py  picamera2backend.py  virtualcamera.py
node/services/backends/io/: abstractbackend.py  gpio.py  gpio_secondary_node.py  gpiobackend.py  virtualio.py
node/services/config/: appconfig.py  models.py
node/web_spa/: index.html
src/examples/: demohub.py
src/tests/benchmarks/: benchmark_encode_jpeg_test.py
src/tests/tests/: test_connector_calibrator.py  test_main.py
src/tests/tests/backends/cameras/: test_virtual.py
src/wigglecam/: __main__.py  app.py  dto.py
src/wigglecam/backends/: base.py
src/wigglecam/backends/cameras/: picam.py  virtual.py
src/wigglecam/backends/cameras/output/: base.py  pynng.py  streamoutput.py
src/wigglecam/backends/triggers/: base.py  pynng.py
src/wigglecam/config/: app.py  camera_picamera2.py  camera_virtual.py  mybasesettings.py  trigger_pynng.py
src/wigglecam/services/: acquisitionservice.py  dto.py  job_encodeprocessor.py  jobservice.py  loggingservice.py
src/wigglecam/services/backends/cameras/: abstractbackend.py  picamera2.py  virtualcamera.py
src/wigglecam/services/backends/io/: abstractbackend.py  gpio.py  virtualio.py
src/wigglecam/utils/: simpledb.py
tests/: test_frameinterpolation_rife_ncnnvulkan.py  test_processor.py  test_register_algorithms.py  utils.py
tests/benchmarks/: benchmark_encode_parallelism_test.py
tests/tests/: test_application_api.py  test_application_minimal.py  test_common_utils.py  test_connector_calibrator.py
wigglecam/: __main__.py  container.py
wigglecam/connector/: __init__.py  calibrator.py  cameranode.py  camerapool.py  dto.py  models.py
wigglecam/primary/: __main__.py  gpio_service.py
wigglecam/routers/api/: __init__.py  camera.py  job.py
wigglecam/secondary/: __main__.py  camera_service.py  gpio_service.py  synced_camera_service.py
wigglecam/services/: acquisitionservice.py  dto.py  jobconnectedservice.py  jobservice.py  jobstandaloneservice.py  sync_acquisition_service.py
wigglecam/services/backends/cameras/: abstractbackend.py  picamera2.py  virtualcamera.py
wigglecam/services/backends/io/: abstractbackend.py  gpio.py  virtualio.py
wigglecam/services/config/: appconfig.py  models.py
wigglecam/utils/: simpledb.py
wigglecam/web_spa/: index.html
wigglify/: app_camera_pyside.py  app_camera_service.py  cli.py  processor.py
wigglify/pipeline/: concatenate_step.py  context.py  inputprepare_step.py  interpolate_step.py  pipeline.py  register_step.py  resize_step.py
wigglify/tests_old/: oldtest_interpolate_step.py  oldtest_pipeline.py  oldtest_register_step.py
